# chap_auto_regressive

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: checks.yml
chap_ar/: __init__.py  registry.py
chap_ar/models/flax_models/: data_loader.py  flax_model.py  flax_model_v1.py  rnn_model.py  trainer.py  transforms.py
docs/: api-reference.md  auto-regression.md  concepts.md  data.md  glossary.md  index.md  libraries.md  usage.md
docs/javascripts/: mermaid-zoom.js
docs/stylesheets/: extra.css
scripts/: dump_parity.py  export_weights.py  make_fixture.py
src/chap_ar/: __init__.py  data_loader.py  distribution_head.py  distributions.py  flax_model.py  flax_model_v1.py  model.py  rnn_model.py  trainer.py  transforms.py
src/chap_auto_regressive/: __init__.py  data_loader.py  distributions.py  model.py  rnn_model.py  trainer.py  transforms.py
tests/: test_data_loader.py  test_distributions.py  test_io.py  test_model.py  test_transforms.py
