[project]
name = "chap_ar"
version = "1.0.0"
description = "Climate-health auto-regressive flax model (minimal, modernized fork)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "chap-core>=1.4.0",
    "flax>=0.10.2",
    "jax>=0.4.34",
    "optax>=0.2.4",
    "scipy>=1.11",
    "numpy>=2.1",
    "more-itertools>=10.0",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.18",
    "pyright>=1.1.400",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chap_ar"]

# ==============================================================================
# Linting / typing config (derived from chapkit)
# ==============================================================================

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]
# Vendored legacy numerical model code: keep correctness/import/format rules,
# relax docstrings (D), over-length commented-out lines (E501), and a couple of
# original legacy-structure idioms (E731 lambda, F811 redefinition) rather than
# rewriting working numerical code.
"chap_ar/models/flax_models/*.py" = ["D", "E501", "E731", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Vendored legacy numerical model files are not type-maintained. registry.py and
# the extracted distributions.py are checked normally; these originals are not.
module = [
    "chap_ar.models.flax_models.flax_model",
    "chap_ar.models.flax_models.flax_model_v1",
    "chap_ar.models.flax_models.data_loader",
    "chap_ar.models.flax_models.distribution_head",
    "chap_ar.models.flax_models.rnn_model",
    "chap_ar.models.flax_models.trainer",
    "chap_ar.models.flax_models.transforms",
]
ignore_errors = true

[tool.pyright]
include = ["chap_ar"]
# Vendored legacy numerical model files are not type-maintained (registry.py and
# the extracted distributions.py remain in scope).
exclude = [
    "**/.venv",
    "chap_ar/models/flax_models/flax_model.py",
    "chap_ar/models/flax_models/flax_model_v1.py",
    "chap_ar/models/flax_models/data_loader.py",
    "chap_ar/models/flax_models/distribution_head.py",
    "chap_ar/models/flax_models/rnn_model.py",
    "chap_ar/models/flax_models/trainer.py",
    "chap_ar/models/flax_models/transforms.py",
]
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
