[project]
name = "chap_ar"
version = "1.0.0"
description = "Climate-health auto-regressive flax model (minimal, modernized fork)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "chap-core>=1.4.0",
    "flax>=0.10.2",
    "jax>=0.4.34",
    "optax>=0.2.4",
    "scipy>=1.11",
    "numpy>=2.1",
    "more-itertools>=10.0",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.18",
    "pyright>=1.1.400",
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

# ==============================================================================
# Linting / typing config (derived from chapkit)
# ==============================================================================

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D104"]
# Vendored legacy numerical model code: keep correctness/import/format rules,
# relax docstrings (D), over-length commented-out lines (E501), and a couple of
# original legacy-structure idioms (E731 lambda, F811 redefinition) rather than
# rewriting working numerical code.
"src/chap_ar/data_loader.py" = ["D"]
"src/chap_ar/distribution_head.py" = ["D"]
"src/chap_ar/flax_model.py" = ["D"]
"src/chap_ar/flax_model_v1.py" = ["D"]
"src/chap_ar/rnn_model.py" = ["D"]
"src/chap_ar/trainer.py" = ["D"]
"src/chap_ar/transforms.py" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Vendored legacy numerical model files are not type-maintained. The extracted
# distributions.py is checked normally; these originals are not.
module = [
    "chap_ar.flax_model",
    "chap_ar.flax_model_v1",
    "chap_ar.data_loader",
    "chap_ar.distribution_head",
    "chap_ar.rnn_model",
    "chap_ar.trainer",
    "chap_ar.transforms",
]
ignore_errors = true

[tool.pyright]
include = ["src/chap_ar"]
# Vendored legacy numerical files lean on untyped/dynamic library surfaces
# (chap_core BNPDataClass attributes, jax/flax arrays) that strict type checking
# can't follow; the extracted distributions.py is checked normally.
exclude = [
    "**/.venv",
    "src/chap_ar/flax_model.py",
    "src/chap_ar/flax_model_v1.py",
    "src/chap_ar/data_loader.py",
    "src/chap_ar/distribution_head.py",
    "src/chap_ar/rnn_model.py",
    "src/chap_ar/trainer.py",
    "src/chap_ar/transforms.py",
]
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
